--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>The Dogs in my Farm</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>The dogs in my farm</h1>
+  <p>The dogs at my farm are always happy to see me.</p>
+  <p>They are all very friendly and love to play</p>
+  <p>They help me out by rounding up the sheep and goats and guarding the property.</p>
+  <p>They are my best friends and I would be lost without them.</p>
+  <!-- To-do: Add more content to this page -->
+</body>
+</html>
